--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Kickstarter alternative implementation with blockchain(Ethereum)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,7 @@
     "ganache-cli": "^6.4.1",
     "mocha": "^6.0.2",
     "solc": "^0.4.22",
+    "truffle-hdwallet-provider": "^1.0.5",
     "web3": "^1.0.0-beta.48"
   }
 }
